--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230221004022">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230221010439">
 	<link rel="shortcut icon" href="img/favicon.svg">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -198,7 +198,8 @@
 					</article>
 				</section>
 				<section class="page__form form">
-					<h2 class="form__title">Оставьте заявку для обратной связи</h2>
+					<h2 class="form__title">Contact Us</h2>
+					<p class="form__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tenetur explicabo quia nisi nobis deserunt sint at a fugit temporibus, asperiores enim tempore facilis. Et.</p>
 					<form data-dev action="#" method="" class="form__form">
 						<input data-required autocomplete="off" type="text" name="form[]" data-error="" placeholder="Name" class="form__input">
 						<input data-required autocomplete="off" type="text" name="form[]" data-error="" placeholder="Last name" class="form__input">
@@ -257,7 +258,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230221004022"></script>
+	<script src="js/app.min.js?_v=20230221010439"></script>
 </body>
 
 </html>
