--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230221025241">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230221050833">
 	<link rel="shortcut icon" href="img/favicon.svg">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -115,10 +115,12 @@
 							<a href="#" class="page__menu-link">Podcasts</a>
 						</li>
 						<li class="page__menu-item page__menu-item_weather">
-							<a href="#" class="page__menu-link">
+							<div class="weather__icon"></div>
+							<div class="weather__forecast"></div>
+							<!-- <a href="#" class="page__menu-link">
 								<img width="28" height="28" src="img/weather.svg" alt="Прогноз погоды">
 								<span>22°</span>
-							</a>
+							</a> -->
 						</li>
 					</ul>
 					<ul class="page__breadcrumbs">
@@ -139,7 +141,7 @@
 								<div class="article__author-name">By Savannah Meacham</div>
 								<div class="article__author-job">Associate Producer</div>
 							</div>
-							<div class="article__date">5:51pm Feb 20, 2023</div>
+							<div class="article__date"></div>
 						</div>
 						<div class="article__text">
 							<p>An Australian academic is one of five researchers who have been taken hostage by an armed group in a remote part of<a href="#">Papua New Guinea.</a></p>
@@ -162,7 +164,7 @@
 								<div class="article__author-name">By Savannah Meacham</div>
 								<div class="article__author-job">Associate Producer</div>
 							</div>
-							<div class="article__date">5:51pm Feb 20, 2023</div>
+							<div class="article__date"></div>
 						</div>
 						<div class="article__text">
 							<p>An Australian academic is one of five researchers who have been taken hostage by an armed group in a remote part of<a href="#">Papua New Guinea.</a></p>
@@ -185,7 +187,7 @@
 								<div class="article__author-name">By Savannah Meacham</div>
 								<div class="article__author-job">Associate Producer</div>
 							</div>
-							<div class="article__date">5:51pm Feb 20, 2023</div>
+							<div class="article__date"></div>
 						</div>
 						<div class="article__text">
 							<p>An Australian academic is one of five researchers who have been taken hostage by an armed group in a remote part of<a href="#">Papua New Guinea.</a></p>
@@ -610,7 +612,9 @@
 			</nav>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230221025241"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js?_v=20230221050833"></script> -->
+	<script src="js/app.min.js?_v=20230221050833"></script>
+
 </body>
 
 </html>
