--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230221050833">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230221053250">
 	<link rel="shortcut icon" href="img/favicon.svg">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -115,12 +115,10 @@
 							<a href="#" class="page__menu-link">Podcasts</a>
 						</li>
 						<li class="page__menu-item page__menu-item_weather">
-							<div class="weather__icon"></div>
-							<div class="weather__forecast"></div>
-							<!-- <a href="#" class="page__menu-link">
-								<img width="28" height="28" src="img/weather.svg" alt="Прогноз погоды">
-								<span>22°</span>
-							</a> -->
+							<a href="#" class="page__menu-link">
+								<div id="weather-icon"></div>
+								<div id="weather-temp"></div>
+							</a>
 						</li>
 					</ul>
 					<ul class="page__breadcrumbs">
@@ -612,8 +610,8 @@
 			</nav>
 		</footer>
 	</div>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js?_v=20230221050833"></script> -->
-	<script src="js/app.min.js?_v=20230221050833"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js?_v=20230221053250"></script> -->
+	<script src="js/app.min.js?_v=20230221053250"></script>
 
 </body>
 
