--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230221055906">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230221064240">
 	<link rel="shortcut icon" href="img/favicon.svg">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,13 +62,13 @@
 				</ul>
 				<div class="header__actions">
 					<a href="#" class="header__socials" title="Socials">
-						<span class="header__actions-text">Connect with us</span>
+						Connect with us
 						<svg width="18" height="18" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
 							<path fill="currentColor" d="M14.443 18.87c0.547 0.52 0.547 1.373 0 1.893-0.52 0.52-1.373 0.52-1.893 0-2.6-2.6-2.6-6.827 0-9.427l4.72-4.72c2.6-2.6 6.827-2.6 9.427 0s2.6 6.827 0 9.427l-1.987 1.987c0.013-1.093-0.16-2.187-0.533-3.227l0.627-0.64c1.573-1.56 1.573-4.093 0-5.653-1.56-1.573-4.093-1.573-5.653 0l-4.707 4.707c-1.573 1.56-1.573 4.093 0 5.653zM18.203 13.217c0.52-0.52 1.373-0.52 1.893 0 2.6 2.6 2.6 6.827 0 9.427l-4.72 4.72c-2.6 2.6-6.827 2.6-9.427 0s-2.6-6.827 0-9.427l1.987-1.987c-0.013 1.093 0.16 2.187 0.533 3.24l-0.627 0.627c-1.573 1.56-1.573 4.093 0 5.653 1.56 1.573 4.093 1.573 5.653 0l4.707-4.707c1.573-1.56 1.573-4.093 0-5.653-0.547-0.52-0.547-1.373 0-1.893z"></path>
 						</svg>
 					</a>
 					<a href="#" class="header__search" title="Search">
-						<span class="header__actions-text">Search</span>
+						Search
 						<svg width="18" height="18" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
 							<path fill="currentColor" d="M20.667 19.333h-1.053l-0.373-0.36c1.307-1.52 2.093-3.493 2.093-5.64 0-4.787-3.88-8.667-8.667-8.667s-8.667 3.88-8.667 8.667 3.88 8.667 8.667 8.667c2.147 0 4.12-0.787 5.64-2.093l0.36 0.373v1.053l6.667 6.653 1.987-1.987-6.653-6.667zM12.667 19.333c-3.32 0-6-2.68-6-6s2.68-6 6-6 6 2.68 6 6-2.68 6-6 6z"></path>
 						</svg>
@@ -610,8 +610,8 @@
 			</nav>
 		</footer>
 	</div>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js?_v=20230221055906"></script> -->
-	<script src="js/app.min.js?_v=20230221055906"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js?_v=20230221064240"></script> -->
+	<script src="js/app.min.js?_v=20230221064240"></script>
 
 </body>
 
